# iso3166

./: Cargo.toml  README.md  generate.py
.github/workflows/: rust.yml
src/: countries.rs  data.rs  lib.rs  serde.rs
tests/: validate.rs
